2016-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/rpm/amanda.spec.src: Remove perl(Dancer2) from the Requires

2016-10-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB.pm: package Amanda::DB;
	* perl/Amanda/Recovery.pm: package Amanda::Recovery;
	* perl/Amanda/Service.pm: package Amanda::Service;

2016-10-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/dvdrw-device.m4, config/amanda/ndmp-device.m4,
	  config/amanda/s3-device.m4: Do not include the device if compiled
	  --without-server

2016-10-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/libs.m4: Do not link with libcurl if no se device or
	  no server
	* config/amanda/s3-device.m4: Re-order

2016-10-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Makefile.am: Amanda::FetchDump::*, Amanda::Recovery::* and
	  Amanda::Amservice are for client or server

2016-10-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Device.pl: Reduce bucket name length

2016-10-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/amanda_configure.m4: Check for getservbyname_t and
	  sem_timedwait
	* common-src/security-util.c: Check HAVE_GETSERVBYNAME_R
	* common-src/shm-ring.c: Check HAVE_SEM_TIMEDWAIT
	* gnulib/regenerate/regenerate: Check configure.ac

2016-10-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/ssl-security.m4: Fix pkg-config argument

2016-10-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amstar.c: Fix exclude pattern

2016-10-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/amanda_configure.m4: Check if clock_gettime exists
	* common-src/debug.c (msg_timestamp): Use time/ctime_r if
	  clock_gettime do not exists

2016-09-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* packaging/common/test_sh_libs.sh: Fix for time

2016-09-29  Jean-Louis Martineau <JMartineau@carbonite.com>