@@ -1,3 +1,8 @@
+2016-10-31  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Service/Amidxtaped.pm: Do not send mesage 4900000 and
+	  4900012 to client
+	* recover-src/extract_list.c: Print size on EOF
+
 2016-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* packaging/rpm/amanda.spec.src: Remove perl(Dancer2) from the Requires
 
